examples/test/testpolicy11200.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11200
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key3: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value34
          key34: value11
          key39: value14
      podSelector:
        matchLabels:
          key36: value34
          key43: value45
          key47: value44
